--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-url-helper",
-  "version": "1.0.0-alpha",
+  "version": "1.0.0-alpha2",
   "description": "",
   "main": "src/index.js",
   "scripts": {
